sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var ech = true 
  while(ech){
    ech = false
    for (i <- 0 to getNombreValeurs()-2-i ){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        ech = true
      }
    }
  }
}